# win_study

./: CMakeLists.txt  README.md
asm_to_win/02/: test.asm  test.c  test1.asm
asm_to_win/03/: hello.asm  hello.c
asm_to_win/04/01/: FirstWindow.asm  FirstWindow.c
win/: a.cpp
win/02/: 02_Mesg.c
win/03/: 03_scrnSize.c  HelloWin.c  HelloWin1.c
win/04/: 04_SYSMTS1.c  04_SYSMTS2.c  04_SYSMTS3.c  04_SYSMTS3_back.c
win/05/: 5_1_DevCaps.c  5_2_SineWave.c  5_3_LineDemo.c  5_4_Bezier.c  5_5_AltWind.c  5_6_WhatSize.c  5_7_RandRect.c  5_8_Clover.c
win/06/: 6_0_SysMets4.c  6_1_KeyView1.c  6_2_StokFont.c  6_3_KeyView2.c  6_4_Typer.c
win/07/: 04_SYSETS.h  7_1_Connect.c  7_2_Checker1.c  7_3_Checker2.c  7_4_Checker3.c  7_5_Checker4.c  7_6_BlokOut1.c  7_7_BlokOut2.c  7_8_SysMets.c
win/08/: 8_1_Beeper1.c  8_2_Beeper2.c  8_3_DigClock.c  8_4_Clock.c  8_5_WhatClr.c
win/09/: 9_1_BtnLook.c  9_2_OwnDraw.c  9_3_Colors1.c  9_4_PopPad1.c  9_5_Environ.c  9_6_head.c
win/10/1/: 10_1_IconDemo.c  IconDemo.rc
win/10/2/: PoePoem.c  PoePoem.rc  RCa08284
win/10/3/: MenuDemo.c  MenuDemo.rc
win/10/4/: PopMenu.c  PopMenu.rc
win/10/5/: PoorMenu.c
win/10/6/: NoPopups.c  NoPopups.rc
win/10/7/: PopPad2.aps  PopPad2.c  PopPad2.rc  resource.h
win/11/01/: About1.aps  About1.c  About1.rc  resource.h
win/11/02/: About2.aps  About2.c
win/11/03/: About3.c
win/11/04/: Colors2.aps  Colors2.c
win/11/05/: HexCalc.c  HexCalc.dlg  RCa01184
win/11/06/: PopFile.c  PopFind.c  PopFont.c  PopPad.c  PopPrnt0.c
win/11/07/: color3.c
win/12/ClipText/: ClipText.aps  ClipText.c
(+36 files in other folders)
